# ituSCT

./: spaceSim.py
HW/: spaceSim.py
task1/: try.cpp
task1/calculator/: a.out  calculator.cpp  calculator.h  main.cpp  output
task1/matrixProject/: CMakeLists.txt  main.cpp
task1/matrixProject/include/: matrix.h  try.h
task1/pointStructure/: a.out  main  main.cpp
task1/pointStructure/main.dSYM/Contents/Resources/DWARF/: main
task1/pointStructure/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
task2/: README.md  a.out  main.cpp
task2/ITU_GAE Task 2/: main.tex
task3/: CMakeLists.txt  pointers  pointers.cpp
